# messaging-app

./: .gitignore  README.md
js/: package.json  tsconfig.json
js/src/: bindings.ts  index.ts  instructions.ts  raw_instructions.ts  state.ts  test.ts  utils.ts
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  instruction_auto.rs  lib.rs  processor.rs  state.rs  utils.rs
program/src/processor/: add_admin_to_group.rs  add_group_admin.rs  create_group_index.rs  create_group_thread.rs  create_profile.rs  create_subscription.rs  create_thread.rs  delete_group_message.rs  delete_message.rs  edit_group_thread.rs  remove_admin_from_group.rs  remove_group_admin.rs  send_message.rs  send_message_group.rs  send_tip.rs  set_user_profile.rs
program/tests/: functional.rs
