
[package]
name = "jab"
version = "0.0.1"
authors = ["contact@bonfida.com"]
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
num-derive = "0.3.3"
solana-program = "1.9.6"
num-traits = "0.2"
thiserror = "1.0.24"
borsh = "0.9.1"
bonfida-utils = "0.2.2"
spl-token = {version = "3.1.0", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}

[dev-dependencies]
solana-sdk = "1.9.7"
solana-client = "1.9.7"
rand = "0.8.3"
solana-program-test = "1.9.7"
tokio = {version="1.10.0", features = ["macros"]}
futures = "0.3.15"
futures-util = "0.3.15"
rand_distr = "0.4.0"
spl-associated-token-account = {version = "1.0.2", features = ["no-entrypoint"]}

[lib]
crate-type = ["cdylib", "lib"]


